0.005 2024-11-02
  [Requirement Changes]
    * Require SPVM 0.990026.
  [Bug Fix]
    * Fix a bug that X509 object is not freed.
    * Fix a bug that X509_CRL object is not freed.
    * Fix a bug that X509_VERIFY_PARAM object is not freed.
    * Fix a bug that X509_STORE_CTX object is not freed.
0.004 2024-10-31
  [New Features]
    * Add Net::SSLeay::X509_STORE#set_flags method.
    * Add Net::SSLeay::X509_CRL class.
    * Add Net::SSLeay::X509_STORE_CTX class.
    * Add Net::SSLeay::X509_STORE#add_crl method.
    * Add Net::SSLeay::PEM#read_bio_X509_CRL method.
  
0.003 2024-10-30
  [New Features]
    * Add Net::SSLeay::SSL_METHOD#SSLv23_method method.
    * Add Net::SSLeay::SSL_METHOD#TLS_method method.
    
0.002 2024-10-30
  [New Features]
    * Add Net::SSLeay::SSL_CTX#set_options
    * Add Net::SSLeay::SSL_CTX#get_options
    * Add Net::SSLeay::SSL_CTX#clear_options
    * Add SPVM::Net::SSLeay::ConfigBuilder class to detect OpenSSL/LibreSSL include and lib directory.
    
0.001 2023-08-19
  [Changes]
    * First release.
  